--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ nbproject/project.xml
 nbproject/private/config.properties
 nbproject/private/private.properties
 nbproject/project.properties
+nbproject/private/private.xml
