--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ nbproject/private/config.properties
 nbproject/private/private.properties
 nbproject/project.properties
 nbproject/private/private.xml
+index.html___jb_old___1
